0.2.0
Fixed loading panelprefs with absolute position set.
Removed resize mode from lfswm2 prefs.
Minor GUI changes.
Added clolour chooser desktop file.
Fixed dialogs.
Updated lfstrayprefs.
Added lfstrayprefs.
Updated lfswm2prefs.
Update to use new prefsclass functions.
Added killall docks to lfsappearance 'Apply'.
Added prelight colour to lfsdockprefs.
File dialog now goes to last valid folder selected.
Right click on lfsdockprefs colour or background image now opens relevent dialog.
Fixed lfsmimeeditor.
Fixed setting subwindows as transients of lfsappearance.
Fixed delay when closing some dialogs.
Added background path to lfsdockprefs
Fixed file seletion.
Changed lfsruncommand to dialog window type.
Changed lfsabout to dialog window type.
Fixed initing window to be above/below/normal.
Added file chooser.
Added include alpha switch to lfscolourchooser.
Added setting desktop names to lfsdesktopprefs.
Apply in dockprefs kills all docks.
Added option to set dock on dockprefs at start up.
Added lfsdockprefs desktop file to install.
Fixed missing prefs image.
Set appnames.
Updated appearance dialog.
Added dock prefs dialog.
Updated prefs apps.
Updated lfscolourchooser to include alpha component.
Updated lfstkprefs.
Fixed first run filedialog.
Added extra options to lfspanelprefs.
Removed unnecessary meunitem  from dock stacking.
Temp removed scale resize.
Added frame alpha ( 0-255 ) to lfswm2 prefs.
Added new lfswm2prefs.
Fixed colour entries in prefs dialogs.
Fixed seg fault on applying lfspanelprefs settings.
Fixed about dialog.
Updated for new lfstk API's.

0.1.3
Fixed windows staying on top of parent windos.
Added lfscolourchooser to apps.
Added scroll/list trough colours to lfstkprefs.
Fixed prefs font select.
Fixed mime list editor apply.
Added font selector to apps.
Added mime type editor to apps
Added option to set number of saved commands in lfsruncommand, see README for details.
Changed lfstkprefs to use new menu and find classes.