@@ -1,4 +1,5 @@
 0.2.0
+Now saves prefs on exit ( including cli options ).
 Updated for new lfstk API's.
 
 0.1.1
